data/derived/sp14/progs/unify/prog4577.ml.out
Characters 138-147:
  let seen' = if List.mem h seen= false then seen@ [h]  in
                                             ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
